packages/build/tests/error/build/fixtures/fail_plugin_error_option/plugin_two.js
module.exports = {
  onPreBuild() {
    console.log('onPreBuild')
  },
  onBuild() {
    console.log('onBuild')
  },
}
